--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
 
+    <!-- AOS Animation -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css" />
 
@@ -37,6 +40,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#projects">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#monitoring">Monitoring</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
@@ -72,27 +78,27 @@
     <section id="about">
       <div class="container">
         <div class="row">
-          <div class="col text-center mb-3">
+          <div class="col text-center mb-3" data-aos="fade-right" data-aos-offset="500">
             <h2>About Project</h2>
           </div>
         </div>
         <div class="row justify-content-center fs-5 text-center">
-          <div class="col-md-3">
+          <div class="col-md-3" data-aos="fade-right" data-aos-offset="500">
             <p><dfn>Project</dfn> ini merupakan project dasar mikroprossesor dengan judul <q>Monitoring Tegangan Output Solar Cell pada Single Axis Solar Tracker Berbasis Internet Of Things</q></p>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-3" data-aos="fade-right" data-aos-offset="500">
             <p>
               Memiliki <strong>prinsip kerja</strong> dengan panel surya menerima radiasi cahaya matahari, kemudian mengubahnya menjadi daya listrik. Perubahan energi ini terjadi ketika foton pada cahaya matahari menghantam semikonduktor
               sel surya sehingga terjadi beda potensial.
             </p>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-3" data-aos="fade-left" data-aos-offset="500" data-aos-delay="50">
             <p>
               Beda potensial dapat diukur menggunakan <strong>sensor tegangan</strong> sehingga dapat menampilkan tegangan yang dihasilkan oleh panel surya secara real-time pada lcd dan dapat ditampilkan secara jarak jauh dengan menggunakan
               <strong>NodeMCU ESP82</strong> .
             </p>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-3" data-aos="fade-left" data-aos-offset="500" data-aos-delay="50">
             <p>
               <strong>Masalah yang diatasi meliputi</strong> Tracking pada solar panel dapat mengikuti sumber cahaya ketika terjadi perubahan posisi pada sumber cahaya. Berkontribusi pada penghasilan energi terbarukan yang berkelanjutan,
               membantu mengurangi ketergantungan pada sumber energi non-terbarukan
@@ -121,7 +127,7 @@
         <div>
           <div class="row">
             <div class="col-md-4 mb-3">
-              <div class="card">
+              <div class="card" data-aos="zoom-in" data-aos-duration="500">
                 <img src="img/project/LED2.jpg" class="card-img-top" alt="..." />
                 <div class="card-body">
                   <p class="card-text">LED Chaser for Knigh Rider Car</p>
@@ -129,7 +135,7 @@
               </div>
             </div>
             <div class="col-md-4 mb-3">
-              <div class="card">
+              <div class="card" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="50">
                 <img src="img/project/solar.webp" class="card-img-top" alt="..." />
                 <div class="card-body">
                   <p class="card-text">Monitoring Tegangan Output Solar Cell pada Single Axis Solar Tracker Berbasis Internet Of Things</p>
@@ -137,7 +143,7 @@
               </div>
             </div>
             <div class="col-md-4 mb-3">
-              <div class="card">
+              <div class="card" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="50">
                 <img src="img/project/blo.webp" class="card-img-top" alt="..." />
                 <div class="card-body">
                   <p class="card-text">Alat Ukur Kadar Gula Darah Non-attensive</p>
@@ -159,7 +165,7 @@
     <!-- End of project -->
 
     <!-- Monitoring  -->
-    <section>
+    <section id="monitoring">
       <div class="container" style="text-align: center"></div>
       <div class="col">
         <div class="row text-center mb-3">
@@ -179,6 +185,71 @@
     </section>
 
     <!-- End of Monitoring -->
+
+    <!-- Gallery -->
+    <section id="gallery">
+      <div class="container">
+        <div class="row text-center mb-3">
+          <div class="col">
+            <h2>Documentation Project</h2>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gallerry/1.jpeg" alt="Dasmik" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gallerry/2.jpeg" alt="Dasmik" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gallerry/3.jpeg" alt="Dasmik" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gallerry/4.jpeg" alt="Dasmik" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gallerry/5.jpeg" alt="Dasmik" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gallerry/6.jpeg" alt="Dasmik" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gallerry/8.jpeg" alt="Dasmik" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gallerry/9.jpeg" alt="Dasmik" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gallerry/10.jpeg" alt="Dasmik" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gallerry/11.jpeg" alt="Dasmik" class="img-fluid gallery-img" />
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- End of Gallery -->
 
     <!-- Contact -->
     <section id="contact">
@@ -236,6 +307,20 @@
     <!-- end of footer -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      const galleryImage = document.querySelectorAll(".gallery-img");
+      galleryImage.forEach((img, i) => {
+        img.dataset.aos = "fade-down";
+        img.dataset.aosDelay = i * 100;
+        img.dataset.aosDuration = 1000;
+      });
+
+      AOS.init({
+        once: true,
+      });
+    </script>
 
     <script>
       const scriptURL = "https://script.google.com/macros/s/AKfycbxntncBnVL5US9Z1YKNkH1vsVcfG3-j8UE_TYE92iyTmfsxZUO6yGopuFukkTdLy_EDQQ/exec";
