--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <link rel="stylesheet" href="style.css" />
 
     <title>Solar Project</title>
+
+    <!-- favicon -->
+    <link href="img/gv.jpeg" rel="icon" />
   </head>
   <body id="home">
     <!-- Navbar -->
@@ -25,7 +28,7 @@
       <div class="container">
         <a class="navbar-brand" href="#">
           <img src="img/gv-removebg-preview.png" alt="" width="30" height="24" class="d-inline-block align-text-top" />
-          Groups-V
+          Group-V
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -39,10 +42,10 @@
               <a class="nav-link" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#projects">Projects</a>
+              <a class="nav-link" href="#projects">Project</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#monitoring">Monitoring</a>
+              <a class="nav-link" href="#gallery">Document</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
@@ -62,7 +65,8 @@
       <img src="img/member/7.jpeg" alt="Syakur" width="200" class="rounded-circle img-thumbnail" />
       <img src="img/member/9.jpeg" alt="Syakur" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4"><strong>Group-V</strong></h1>
-      <p class="lead">Dasmik | Project</p>
+      <p>Dasmik | Project</p>
+      <p class="lead">Kemal | Ramadhan | Zaakiy | Syakur</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill=" #fff"
@@ -95,7 +99,7 @@
           <div class="col-md-3" data-aos="fade-left" data-aos-offset="500" data-aos-delay="50">
             <p>
               Beda potensial dapat diukur menggunakan <strong>sensor tegangan</strong> sehingga dapat menampilkan tegangan yang dihasilkan oleh panel surya secara real-time pada lcd dan dapat ditampilkan secara jarak jauh dengan menggunakan
-              <strong>NodeMCU ESP82</strong> .
+              <strong>NodeMCU ESP8266</strong> .
             </p>
           </div>
           <div class="col-md-3" data-aos="fade-left" data-aos-offset="500" data-aos-delay="50">
@@ -121,33 +125,17 @@
       <div class="container">
         <div class="row text-center mb-3">
           <div class="col">
-            <h2>The Projects</h2>
+            <h2>The Project</h2>
           </div>
         </div>
-        <div>
-          <div class="row">
-            <div class="col-md-4 mb-3">
-              <div class="card" data-aos="zoom-in" data-aos-duration="500">
-                <img src="img/project/LED2.jpg" class="card-img-top" alt="..." />
-                <div class="card-body">
-                  <p class="card-text">LED Chaser for Knigh Rider Car</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4 mb-3">
-              <div class="card" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="50">
-                <img src="img/project/solar.webp" class="card-img-top" alt="..." />
-                <div class="card-body">
-                  <p class="card-text">Monitoring Tegangan Output Solar Cell pada Single Axis Solar Tracker Berbasis Internet Of Things</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4 mb-3">
-              <div class="card" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="50">
-                <img src="img/project/blo.webp" class="card-img-top" alt="..." />
-                <div class="card-body">
-                  <p class="card-text">Alat Ukur Kadar Gula Darah Non-attensive</p>
-                </div>
+        <div class="row justify-content-center">
+          <div class="col-md-3">
+            <div class="card text-center" style="width: 18rem">
+              <img src="img/project/solar.webp" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Dasmik Project</h5>
+                <p class="card-text">Monitoring Tegangan Output Solar Cell pada Single Axis Solar Tracker Berbasis Internet Of Things</p>
+                <a href="https://kelompok5dasmik.000webhostapp.com/" class="btn btn-primary"> Let's Go</a>
               </div>
             </div>
           </div>
@@ -163,28 +151,6 @@
     </section>
 
     <!-- End of project -->
-
-    <!-- Monitoring  -->
-    <section id="monitoring">
-      <div class="container" style="text-align: center"></div>
-      <div class="col">
-        <div class="row text-center mb-3">
-          <h2>Monitoring Tegangan</h2>
-          <div class="panel panel-default">
-            <div class="panel-body">75</div>
-          </div>
-        </div>
-      </div>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path
-          fill="#fff"
-          fill-opacity="1"
-          d="M0,128L48,112C96,96,192,64,288,69.3C384,75,480,117,576,138.7C672,160,768,160,864,170.7C960,181,1056,203,1152,181.3C1248,160,1344,96,1392,64L1440,32L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
-        ></path>
-      </svg>
-    </section>
-
-    <!-- End of Monitoring -->
 
     <!-- Gallery -->
     <section id="gallery">
@@ -237,12 +203,22 @@
           </div>
           <div class="col-md-3">
             <a href="#">
-              <img src="img/gallerry/10.jpeg" alt="Dasmik" class="img-fluid gallery-img" />
+              <img src="img/gallerry/98.jpeg" alt="Dasmik" class="img-fluid gallery-img" />
             </a>
           </div>
           <div class="col-md-3">
             <a href="#">
               <img src="img/gallerry/11.jpeg" alt="Dasmik" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gallerry/10.jpeg" alt="Dasmik" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/gallerry/89.jpeg" alt="Dasmik" class="img-fluid gallery-img" />
             </a>
           </div>
         </div>
@@ -294,6 +270,13 @@
           fill="#fff"
           fill-opacity="1"
           d="M0,0L30,16C60,32,120,64,180,106.7C240,149,300,203,360,218.7C420,235,480,213,540,202.7C600,192,660,192,720,181.3C780,171,840,149,900,160C960,171,1020,213,1080,234.7C1140,256,1200,256,1260,224C1320,192,1380,128,1410,96L1440,64L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z"
+        ></path>
+      </svg>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#f7b733"
+          fill-opacity="1"
+          d="M0,224L48,240C96,256,192,288,288,261.3C384,235,480,149,576,122.7C672,96,768,128,864,160C960,192,1056,224,1152,229.3C1248,235,1344,213,1392,202.7L1440,192L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
         ></path>
       </svg>
     </section>
