--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
               <img src="img/project/solar.webp" class="card-img-top" alt="..." />
               <div class="card-body">
                 <h5 class="card-title">Dasmik Project</h5>
-                <p class="card-text">Monitoring Tegangan Output Solar Cell pada Single Axis Solar Tracker Berbasis Internet Of Things</p>
+                <p class="card-text"><q>Monitoring Tegangan Output Solar Cell pada Single Axis Solar Tracker Berbasis Internet Of Things</q></p>
                 <a href="https://kelompok5dasmik.000webhostapp.com/" class="btn btn-primary"> Let's Go</a>
               </div>
             </div>
@@ -283,9 +283,7 @@
     <!-- end of contact -->
 
     <!-- Footer -->
-    <footer class="text-center text-white pb-5" style="background-color: #f7b733">
-      <p>Created By <i class="bi bi-lightning-charge-fill text-success"></i> <a href="https://www.instagram.com/hwsurmonday/" class="text-white">Group-V</a></p>
-    </footer>
+    <footer class="text-center text-white pb-5" style="background-color: #f7b733">Created By <i class="bi bi-lightning-charge-fill text-success"></i> Group-V</footer>
 
     <!-- end of footer -->
 
